--- a/javav2/example_code/codedeploy/pom.xml
+++ b/javav2/example_code/codedeploy/pom.xml
@@ -71,6 +71,7 @@
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>codedeploy</artifactId>
-          </dependency>
+            <version>2.16.29</version>
+        </dependency>
     </dependencies>
 </project>
