--- a/javav2/example_code/dynamodb/pom.xml
+++ b/javav2/example_code/dynamodb/pom.xml
@@ -77,6 +77,20 @@
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>dynamodb</artifactId>
+            <version>2.16.29</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/software.amazon.awssdk/kms -->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>kms</artifactId>
+            <version>2.16.29</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/software.amazon.awssdk/core -->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>core</artifactId>
+            <version>2.16.29</version>
+            <type>pom</type>
         </dependency>
     </dependencies>
 </project>
