--- a/javav2/example_code/kinesis/pom.xml
+++ b/javav2/example_code/kinesis/pom.xml
@@ -78,5 +78,12 @@
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.projectreactor/reactor-core -->
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+            <version>3.4.9</version>
+        </dependency>
+
     </dependencies>
 </project>
