--- a/javav2/example_code/rds/pom.xml
+++ b/javav2/example_code/rds/pom.xml
@@ -31,8 +31,8 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.amazonaws</groupId>
-                <artifactId>aws-java-sdk-bom</artifactId>
+                <groupId>software.amazon.awssdk</groupId>
+                <artifactId>bom</artifactId>
                 <version>2.16.29</version>
                 <type>pom</type>
                 <scope>import</scope>
