--- a/javav2/example_code/redshift/pom.xml
+++ b/javav2/example_code/redshift/pom.xml
@@ -11,9 +11,15 @@
         <java.version>1.8</java.version>
     </properties>
     <repositories>
+<!--
         <repository>
             <id>redshift</id>
             <url>http://redshift-maven-repository.s3-website-us-east-1.amazonaws.com/release</url>
+        </repository>
+-->
+        <repository>
+            <id>mulesoft</id>
+            <url>https://repository.mulesoft.org/nexus/content/repositories/public/</url>
         </repository>
     </repositories>
     <build>
