--- a/javav2/usecases/creating_lambda_tag_assets/pom.xml
+++ b/javav2/usecases/creating_lambda_tag_assets/pom.xml
@@ -25,7 +25,14 @@
         </dependencies>
     </dependencyManagement>
     <dependencies>
-       <dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <version>2.5.4</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-lambda-java-core</artifactId>
             <version>1.2.1</version>
